--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android-petshop</string>
+
+    <string name="generos_title">Géneros</string>
 </resources>
